--- a/munin-node.in
+++ b/munin-node.in
@@ -14,8 +14,14 @@
 
 VERSION="@@VERSION@@"
 
+@@CONF@@
+
 # Remove unwanted plugins from this list
 PLUGINS="@@PLUGINS@@"
+# ===== LIB FUNCTIONS =====
+clean_fieldname() {
+  echo "$@" | sed -e 's/^[^A-Za-z_]/_/' -e 's/[^A-Za-z0-9_]/_/g'
+}
 
 # ===== PLUGINS CODE =====
 @@PLSTR@@
