--- a/munin-node.in
+++ b/munin-node.in
@@ -72,18 +72,20 @@ RES=""
 for PLUG in $PLUGINS
 do 
   if [ "$PLUG" = "if_" ]; then  
-    for INTER in $(grep '^ *\(ppp\|eth\|wlan\|ath\|ra\)[0-9]\{1,\}:' /proc/net/dev | cut -f1 -d: | sed 's/ //g');
+    for INTER in $(grep '^ *\(ppp\|eth\|wlan\|ath\|ra\|ipsec\)\([^:]\)\{1,\}:' /proc/net/dev | cut -f1 -d: | sed 's/ //g');
     do
-      RES="$RES if_$INTER"
-      eval "fetch_if_${INTER}() { fetch_if $INTER $@; };"
-      eval "config_if_${INTER}() { config_if $INTER $@; };"
+      INTERRES=$(echo $INTER | sed 's/\./VLAN/')
+      RES="$RES if_$INTERRES"
+      eval "fetch_if_${INTERRES}() { fetch_if $INTER $@; };"
+      eval "config_if_${INTERRES}() { config_if $INTER $@; };"
     done
   elif [ "$PLUG" = "if_err_" ]; then
-    for INTER in $(grep '^ *\(ppp\|eth\|wlan\|ath\|ra\)[0-9]\{1,\}:' /proc/net/dev | cut -f1 -d: | sed 's/ //g');
+    for INTER in $(grep '^ *\(ppp\|eth\|wlan\|ath\|ra\|ipsec\)\([^:]\)\{1,\}:' /proc/net/dev | cut -f1 -d: | sed 's/ //g');
     do
-      RES="$RES if_err_$INTER"
-      eval "fetch_if_err_${INTER}() { fetch_if_err $INTER $@; };"
-      eval "config_if_err_${INTER}() { config_if_err $INTER $@; };"
+      INTERRES=$(echo $INTER | sed 's/\./VLAN/')
+      RES="$RES if_err_$INTERRES"
+      eval "fetch_if_err_${INTERRES}() { fetch_if_err $INTER $@; };"
+      eval "config_if_err_${INTERRES}() { config_if_err $INTER $@; };"
     done
   elif [ "$PLUG" = "netstat" ]; then
     if netstat -s >/dev/null 2>&1; then
