--- a/muninlite.in
+++ b/muninlite.in
@@ -115,7 +115,7 @@ PLUGINS=$(echo "$RES" | xargs -r -n 1 echo | sort | xargs echo)
 FUNCTIONS="list nodes config fetch version quit"
 HOSTNAME=$(hostname -f 2>/dev/null || hostname)
 echo "# munin node at $HOSTNAME"
-while read arg0 arg1
+while read -r arg0 arg1
 do
   arg0=$(echo "$arg0" | xargs)
   arg1=$(echo "$arg1" | xargs)
