Change encoding of main script to UTF-8

--- a/muninlite.in
+++ b/muninlite.in
@@ -5,7 +5,7 @@
 #
 # For latest version, see http://muninlite.sf.net/
 #
-# Copyright (c) 2007-2011 Rune Nordbøe Skillingstad <rune@skillingstad.no>
+# Copyright (c) 2007-2011 Rune NordbÃ¸e Skillingstad <rune@skillingstad.no>
 #
 # Licensed under GPLv2 (see LICENSE file for full License)
 #
