Describe the purpose of the muninlite.conf file

--- a/muninlite.conf
+++ b/muninlite.conf
@@ -1,2 +1,2 @@
-#
-NTP_PEER="pool.ntp.org";
+# the following variables are added to the top of the assembled muninlite script
+NTP_PEER="pool.ntp.org"
