Use /usr/local/bin/muninlite consistently in examples
Packagers (e.g. for OpenWrt) usually pick a different path (e.g.
/usr/bin/muninlite or /usr/sbin/muninlite), but a native installation
from source should point to /usr/local/... by default.

The change affects only examples, thus it should do no harm.

--- a/examples/post-muninlite.ini
+++ b/examples/post-muninlite.ini
@@ -26,7 +26,7 @@ if [ -f /sbin/inetd ]; then
     echo "muninlite can not start as lrrd is already in use"
     exit 1
   else
-    echo "lrrd    stream  tcp     nowait  root    /usr/bin/muninlite" >> /etc/inetd.conf
+    echo "lrrd    stream  tcp     nowait  root    /usr/local/bin/muninlite" >> /etc/inetd.conf
   fi
   PID=$(ps | grep -v grep | grep inetd | sed 's/^ \{1,\}//' | cut -d\  -f1)
   if [ ! -z "$PID" ]; then
