Remove handling of "lrrd"
The "lrrd" service seems to be some historical cruft, that is no longer
in use.  It is still an alias for the "munin" service (port 4949) in
/etc/services, but probably not in use anymore.

--- a/examples/post-muninlite.ini
+++ b/examples/post-muninlite.ini
@@ -22,12 +22,7 @@
 
 
 if [ -f /sbin/inetd ]; then
-  if grep "^lrrd" /etc/inetd.conf >/dev/null 2>&1; then
-    echo "muninlite can not start as lrrd is already in use"
-    exit 1
-  else
-    echo "lrrd    stream  tcp     nowait  root    /usr/local/bin/muninlite" >> /etc/inetd.conf
-  fi
+  echo "munin    stream  tcp     nowait  root    /usr/local/bin/muninlite" >> /etc/inetd.conf
   PID=$(ps | grep -v grep | grep inetd | sed 's/^ \{1,\}//' | cut -d\  -f1)
   if [ ! -z "$PID" ]; then
     echo "inetd already running.. restarting.."
