muninlite: make shellcheck happy, again

--- a/muninlite.in
+++ b/muninlite.in
@@ -72,6 +72,7 @@ do_quit() {
 }
 
 # ===== Runtime config =====
+# shellcheck source=/dev/null
 [ -f ${CONFIG_FILE} ] && . ${CONFIG_FILE}
 RES=""
 for PLUG in $PLUGINS; do
