netstat: drop `netstat -s` dep by using `/proc/net/snmp` data directly
This allows the plugin to work under OpenWRT as the busybox netstat
does not support `netstat -s`.

Fixes: https://github.com/munin-monitoring/muninlite/issues/14
Signed-off-by: Rany Hany <rany_hany@riseup.net>

--- a/muninlite.in
+++ b/muninlite.in
@@ -87,7 +87,7 @@ for PLUG in $PLUGINS; do
       done
       ;;
     netstat)
-      if netstat -s >/dev/null 2>&1; then
+      if [ -f /proc/net/snmp ]; then
         RES="$RES netstat"
       fi
       ;;
