Add timeout option to prevent the process from blocking

--- a/muninlite.conf
+++ b/muninlite.conf
@@ -3,3 +3,9 @@ NTP_PEER="pool.ntp.org"
 DF_IGNORE_FILESYSTEM_REGEX="(none|unknown|rootfs|iso9660|squashfs|udf|romfs|ramfs|debugfs|cgroup_root|devtmpfs)"
 
 #INTERFACE_NAMES_OVERRIDE="eth0"
+
+# Timeout seconds for waiting for input in the main function.
+## If you find a large number of muninlite processes associate with idle connections, consider setting this value. 
+## Please note that this option may not be supported by your current shell.
+# Default:0 (disable)
+TIMEOUT_SEC=0
